--- a/stylem.css
+++ b/stylem.css
@@ -5,13 +5,15 @@ body {
 	max-width: 1000px;
 	float: none;
 	margin: auto;
-	background: url(img/nedladdning.jpg);
+	background-attachment: fixed;
+	background-image: url(img/CPX3Jc.gif);
+    background-size: cover;
 }
 
 .bg {
 	border-style:solid;
 	border-width:1px;
-	background-color:#f07800;
+	background-color:#cfc3ab;
 	
 }
 
@@ -20,47 +22,54 @@ header {
 	border-width:1px;
 	background-color:#db4900;
 	width: 100%;
-	display: inline-block;
+	display: block;
 }
 p {
 	padding: 15px;
-	width: 60%;
 	margin: auto;
-	font-family: EB Garamond;
+	font-family: 'Times New Roman', serif;
 	
 }
 .aside-left {
+	border-style:solid;
+	border-width:1px;
 	width: 20%;
 	float: left;
 	display: block;
-	min-height: 300px;
-	background-color: #f07800;
+	min-height: 320px;
+	background-color: #fff;
 }
 main {
-	width: 58%;
-	float: left;
+	border-style:solid;
+	border-width:1px;
+	width: 50%;
+	background-color: #fff;
+	margin: auto;
+	float: center;
 	display: block;
 	min-height: 300px;
 }
 aside {
+	border-style:solid;
+	border-width:1px;
 	width: 20%;
 	float: right;
 	display: block;
-	min-height: 300px;
-	background-color: #f07800;
+	height: 320px;
+	background-color: #fff;
 }
 footer {
 	width: 100%;
 	height: 10%;
 	display: inline-block;
-	background-color: #964b00;
+	background-color: #cfc3ab;
 }
 .left-footer {
 	width: 33%;
 	float: left;
 	display: block;
 	min-height: 50px;
-	background-color: #964b00;
+	background-color: #cfc3ab;
 	color: #fff;
 }
 .center-footer {
@@ -68,7 +77,7 @@ footer {
 	float: left;
 	display: block;
 	min-height: 50px;
-	background-color: #964b00;
+	background-color: #cfc3ab;
 	color: #fff;
 }
 .right-footer {
@@ -76,10 +85,12 @@ footer {
 	float: right;
 	display: block;
 	min-height: 50px;
-	background-color: #964b00;
+	background-color: #cfc3ab;
 	color: #fff;
 }
 .copyright {
+	border-style:solid;
+	border-width:1px;
 	width: 100%;
 	display: inline-block;
 	background-color:#ff8000
@@ -115,12 +126,12 @@ footer {
 }
 
 h1,h2,h3,h4,h6 {  
-	font-family:Century Gothic,sans-serif;  
+	font-family: Georgia, serif;  
 	padding: 3px;
-	color: white;
+	color: black;
 }
 h5 {
-	font-family:Century Gothic,sans-serif;
+	font-family: Georgia, serif;
 	padding: 3px;
 	font-size: 17px;
 }
@@ -128,7 +139,7 @@ h5 {
 a {
 	padding: 10px;
 	position: realtive;
-	font-family:Century Gothic,sans-serif;
+	font-family: Georgia, serif;
 	
 }
 
@@ -166,11 +177,6 @@ a {
   }
 }
 
-img:hover {
-  animation: shake 0.5s;
-  animation-iteration-count: infinite;
-}
-
 @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -185,22 +191,7 @@ img:hover {
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 15px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #ff8800; 
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #bf6600; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #9c5300; 
+img {
+	border-style:solid;
+	border-width:1px;
 }
