--- a/stylem.css
+++ b/stylem.css
@@ -93,7 +93,7 @@ footer {
 	border-width:1px;
 	width: 100%;
 	display: inline-block;
-	background-color:#b512b8
+	background-color:#b512b8;
 }
 
 .topnav {
