--- a/stylem.css
+++ b/stylem.css
@@ -14,7 +14,7 @@ body {
 .bg {
 	border-style:solid;
 	border-width:1px;
-	background-color:#cfc3ab;
+	background-color:#c96bc0;
 	
 }
 
@@ -62,14 +62,26 @@ footer {
 	width: 100%;
 	height: 10%;
 	display: inline-block;
-	background-color: #cfc3ab;
+	background-color: #c96bc0;
 }
+
+.box {
+	border-style:solid;
+	border-width:1px;
+	width: 90%;
+	margin: auto;
+	float: center;
+	background-color: #fff;
+	min-height: 140px;
+	padding: 20px;
+}
+
 .left-footer {
 	width: 33%;
 	float: left;
 	display: block;
 	min-height: 50px;
-	background-color: #cfc3ab;
+	background-color: #c96bc0;
 	color: #fff;
 }
 .center-footer {
@@ -77,7 +89,7 @@ footer {
 	float: left;
 	display: block;
 	min-height: 50px;
-	background-color: #cfc3ab;
+	background-color: #c96bc0;
 	color: #fff;
 }
 .right-footer {
@@ -85,7 +97,7 @@ footer {
 	float: right;
 	display: block;
 	min-height: 50px;
-	background-color: #cfc3ab;
+	background-color: #c96bc0;
 	color: #fff;
 }
 .copyright {
@@ -126,7 +138,7 @@ footer {
 }
 
 h1,h2,h3,h4,h6 {  
-	padding: 3px;
+	padding: 0px;
 	color: black;
 }
 h5 {
@@ -136,7 +148,7 @@ h5 {
 
 a {
 	padding: 10px;
-	position: realtive;
+	position: relative;
 	
 }
 
@@ -151,7 +163,7 @@ a {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  position: realtive;
+  position: relative;
 }
 
 .button1 {border-radius: 8px;}
@@ -193,6 +205,7 @@ img {
 	border-width:1px;
 	margin: auto;
 	max-width: 700px;
+	position: relative;
 }
 
 video {
