--- a/stylem.css
+++ b/stylem.css
@@ -159,6 +159,7 @@ a {
   padding: 10px;
   text-align: center;
   text-decoration: none;
+  font-family: Minecraftia;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
