--- a/stylem.css
+++ b/stylem.css
@@ -32,7 +32,11 @@ p {
 }
 .aside-left {
 	border-style:solid;
-	border-width:1px;
+	border-width:10px;
+	border-color: #b512b8;
+	outline-style: solid;
+	outline-width: thin;
+	outline-color: black;
 	width: 20%;
 	float: left;
 	display: block;
@@ -41,7 +45,11 @@ p {
 }
 main {
 	border-style:solid;
-	border-width:1px;
+	border-width:10px;
+	border-color: #b512b8;
+	outline-style: solid;
+	outline-width: thin;
+	outline-color: black;
 	width: 50%;
 	background-color: #fff;
 	margin: auto;
@@ -51,7 +59,11 @@ main {
 }
 aside {
 	border-style:solid;
-	border-width:1px;
+	border-width:10px;
+	border-color: #b512b8;
+	outline-style: solid;
+	outline-width: thin;
+	outline-color: black;
 	width: 20%;
 	float: right;
 	display: block;
@@ -103,9 +115,11 @@ footer {
 .copyright {
 	border-style:solid;
 	border-width:1px;
+	border-color: black;
 	width: 100%;
 	display: inline-block;
 	background-color:#b512b8;
+	color: #fff;
 }
 
 .topnav {
@@ -377,4 +391,13 @@ th {
 
 .italic {
   font-style: italic;
+}
+
+.container {
+    padding: 5px;
+    background-color: #fff;
+    width: auto;
+    height: 300px;
+    overflow-x: hidden;
+    overflow: auto;
 }
