--- a/DraklekplatsWiki/style.css
+++ b/DraklekplatsWiki/style.css
@@ -6,32 +6,14 @@
 	color: #fff;
 }
 
-@media only screen and (max-width: 800px) {
-
 main {
     padding: 15px;
     border-style: solid;
 	border-width: 1px;
 	border-color: black;
-    min-height: 400px;
-}
-
-aside {
-    display: none;
-}
-    
-}
-
-@media only screen and (min-width: 800px) {
-
-main {
-    padding: 15px;
-    border-style: solid;
-	border-width: 1px;
-	border-color: black;
-    max-width: 80%;
-    width: 79%;
-    min-width: 40%;
+    width: 98%;
+	margin-left: auto;
+	margin-right: auto;
     min-height: 400px;
 }
 
@@ -41,14 +23,18 @@ aside {
 	border-width: 1px;
 	border-color: black;
     max-width: 250px;
-    width: 15%;
+    width: 200px;
     float: right;
+	background-color: white;
 }
 
-body{
-    width: 98%;
-    margin-left: auto;
-    margin-right: auto;
+
+
+html {
+  scroll-behavior: smooth;
+  font-family: sans-serif;
 }
-    
+
+section {
+  scroll-margin-top: 110px;
 }
