--- a/style.css
+++ b/style.css
@@ -30,9 +30,13 @@ img {
 }
 
 .servermanageDoor:hover {
-	content: url("servermanageDoor.png")
+	content: url("doors/servermanageDoor.png")
 }
 
 .siteDoor:hover {
-	content: url("siteDoor.png");
+	content: url("doors/siteDoor.png");
+}
+
+.esperDoor:hover {
+	content: url("doors/esperDoor.png");
 }
