--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 @font-face {
   font-family: "undertale";
-  src: url("fonts/8bitOperatorPlus-Bold.ttf");
+  src: url("https://mansysite.org/fonts/8bitOperatorPlus-Bold.ttf");
 }
 
 h1 {
