--- a/wm/style.css
+++ b/wm/style.css
@@ -2,6 +2,18 @@ body {
     background-color: gray;
     font-family: Verdana, sans-serif;
 }
+button {
+    font-size: 11px;
+    outline: 1px solid #000000;
+    background: #C0C0C0;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #FFFFFF #808080 #808080 #FFFFFF;
+    padding: 4px 10px;
+    margin: 20px 10px 3px;
+    display: block;
+    position: relative;
+}
 
 /* Test Window Example */
 #Window{
@@ -42,7 +54,7 @@ body {
     width: 100%;
 }
 
-/* mansysite.org Window CSS */
+/* Monster Reviews Window CSS */
 #Site{
     border: 2px black solid;
     position: absolute;
@@ -54,7 +66,26 @@ body {
 #SiteBar{
     cursor: move;
     z-index: 10;
-    background-color: cornflowerblue;
+    background-color: rebeccapurple;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    color: white;
+}
+
+/* Subway Surfers Window CSS */
+#Surf{
+    border: 2px black solid;
+    position: absolute;
+    z-index: 9;
+    background-color: white;
+    width: 800px;
+    height: 600px;
+}
+#SurfBar{
+    cursor: move;
+    z-index: 10;
+    background-color: darkorange;
     padding-top: 10px;
     padding-bottom: 10px;
     width: 100%;
